flux-system/addons/webhooks/github/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: github-webhook
  namespace: flux-system
spec:
  hostnames:
    - "flux-webhook.${INTERNAL_HOSTNAME}"
  parentRefs:
    - name: traefik-production
      namespace: networking
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /hook/
      backendRefs:
        - name: webhook-receiver
          port: 80
